Add Dropdown Layanan

--- a/superadmin/tiket/index.html
+++ b/superadmin/tiket/index.html
@@ -261,6 +261,16 @@
                 <option value="all">Semua Bidang</option>
                 <option value="Pelayanan Akademik">Pelayanan Akademik</option>
                 <option value="Pelayanan Keuangan">Pelayanan Keuangan</option>
+                <option value="Kemahasiswaan">Kemahasiswaan</option>
+                <option value="Sarana & Prasarana">Sarana & Prasarana</option>
+                <option value="SIKADU">SIKADU</option>
+                <option value="SIKAWAN">SIKAWAN</option>
+                <option value="Pelayanan Wisuda">Pelayanan Wisuda</option>
+                <option value="TOEFL/TOAFL">TOEFL/TOAFL</option>
+                <option value="Sistem Informasi">Sistem Informasi</option>
+                <option value="Perpustakaan">Perpustakaan</option>
+                <option value="Pusat Karir">Pusat Karir</option>
+                <option value="Jaringan/WiFi">Jaringan/WiFi</option>
               </select>
               <span class="absolute bottom-2 right-2 z-10"
                 ><i class="fa-solid fa-caret-down"></i
