Tambah Data Dummy Tiket

--- a/superadmin/tiket/index.html
+++ b/superadmin/tiket/index.html
@@ -322,77 +322,320 @@
                 <td class="px-4 py-3">Pelayanan Akademik</td>
                 <td class="px-4 py-3">08/10/2025</td>
                 <td class="px-4 py-3">10:00</td>
-                <td class="px-4 py-3">1 Hari 2 Jam</td>
+                <td class="px-4 py-3">1 Hari 1 Jam</td>
                 <td class="px-4 py-3 text-green-700 font-semibold">Selesai</td>
                 <td class="px-4 py-3 text-center">
                   <div class="flex justify-center gap-2">
                     <button
                       class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
-                      title="Edit"
+                      title="Detail"
                     >
                       <i class="fa-solid fa-list-ul"></i>
                     </button>
                     <button
                       class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
-                      title="Hapus"
+                      title="Kunci"
                     >
                       <i class="fa-solid fa-lock"></i>
                     </button>
                   </div>
                 </td>
               </tr>
+
               <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
                 <td class="px-4 py-3">2</td>
-                <td class="px-4 py-3 font-mono text-blue-600">29P-ZRV-5DS2</td>
-                <td class="px-4 py-3">07/10/2025</td>
-                <td class="px-4 py-3">09:00</td>
-                <td class="px-4 py-3">Farid Sunanda</td>
-                <td class="px-4 py-3">Pelayanan Akademik</td>
-                <td class="px-4 py-3">-</td>
-                <td class="px-4 py-3">-</td>
-                <td class="px-4 py-3">-</td>
-                <td class="px-4 py-3 text-indigo-700 font-semibold">
+                <td class="px-4 py-3 font-mono text-blue-600">18F-PLQ-8JK1</td>
+                <td class="px-4 py-3">08/10/2025</td>
+                <td class="px-4 py-3">08:45</td>
+                <td class="px-4 py-3">Nabila Sari</td>
+                <td class="px-4 py-3">Pelayanan Keuangan</td>
+                <td class="px-4 py-3">08/10/2025</td>
+                <td class="px-4 py-3">12:10</td>
+                <td class="px-4 py-3">3 Jam 25 Menit</td>
+                <td class="px-4 py-3 text-green-700 font-semibold">Selesai</td>
+                <td class="px-4 py-3 text-center">
+                  <div class="flex justify-center gap-2">
+                    <button
+                      class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-list-ul"></i>
+                    </button>
+                    <button
+                      class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-lock"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+
+              <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
+                <td class="px-4 py-3">3</td>
+                <td class="px-4 py-3 font-mono text-blue-600">64D-RTH-9PL2</td>
+                <td class="px-4 py-3">08/10/2025</td>
+                <td class="px-4 py-3">10:30</td>
+                <td class="px-4 py-3">Rizky Firmansyah</td>
+                <td class="px-4 py-3">Kemahasiswaan</td>
+                <td class="px-4 py-3">09/10/2025</td>
+                <td class="px-4 py-3">09:15</td>
+                <td class="px-4 py-3">22 Jam 45 Menit</td>
+                <td class="px-4 py-3 text-yellow-600 font-semibold">
                   Dalam Proses
                 </td>
                 <td class="px-4 py-3 text-center">
                   <div class="flex justify-center gap-2">
                     <button
                       class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
-                      title="Edit"
                     >
                       <i class="fa-solid fa-list-ul"></i>
                     </button>
                     <button
                       class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
-                      title="Hapus"
                     >
                       <i class="fa-solid fa-lock"></i>
                     </button>
                   </div>
                 </td>
               </tr>
+
               <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
-                <td class="px-4 py-3">3</td>
-                <td class="px-4 py-3 font-mono text-blue-600">29P-ZRV-5DS2</td>
-                <td class="px-4 py-3">07/10/2025</td>
-                <td class="px-4 py-3">09:00</td>
-                <td class="px-4 py-3">Farid Sunanda</td>
-                <td class="px-4 py-3">Pelayanan Akademik</td>
-                <td class="px-4 py-3">-</td>
-                <td class="px-4 py-3">-</td>
-                <td class="px-4 py-3">-</td>
-                <td class="px-4 py-3 text-red-700 font-semibold">Baru</td>
+                <td class="px-4 py-3">4</td>
+                <td class="px-4 py-3 font-mono text-blue-600">75K-BGF-4ER9</td>
+                <td class="px-4 py-3">09/10/2025</td>
+                <td class="px-4 py-3">08:10</td>
+                <td class="px-4 py-3">Aulia Rahman</td>
+                <td class="px-4 py-3">Sarana & Prasarana</td>
+                <td class="px-4 py-3">09/10/2025</td>
+                <td class="px-4 py-3">14:20</td>
+                <td class="px-4 py-3">6 Jam 10 Menit</td>
+                <td class="px-4 py-3 text-green-700 font-semibold">Selesai</td>
                 <td class="px-4 py-3 text-center">
                   <div class="flex justify-center gap-2">
                     <button
                       class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
-                      title="Edit"
                     >
                       <i class="fa-solid fa-list-ul"></i>
                     </button>
                     <button
                       class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
-                      title="Hapus"
+                    >
+                      <i class="fa-solid fa-lock"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+
+              <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
+                <td class="px-4 py-3">5</td>
+                <td class="px-4 py-3 font-mono text-blue-600">42L-MNP-7QC8</td>
+                <td class="px-4 py-3">09/10/2025</td>
+                <td class="px-4 py-3">11:15</td>
+                <td class="px-4 py-3">Bima Prasetyo</td>
+                <td class="px-4 py-3">SIKADU</td>
+                <td class="px-4 py-3">09/10/2025</td>
+                <td class="px-4 py-3">-</td>
+                <td class="px-4 py-3">Belum Ada</td>
+                <td class="px-4 py-3 text-red-600 font-semibold">Baru</td>
+                <td class="px-4 py-3 text-center">
+                  <div class="flex justify-center gap-2">
+                    <button
+                      class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-list-ul"></i>
+                    </button>
+                    <button
+                      class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-lock"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+
+              <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
+                <td class="px-4 py-3">6</td>
+                <td class="px-4 py-3 font-mono text-blue-600">83P-TYU-6AW3</td>
+                <td class="px-4 py-3">09/10/2025</td>
+                <td class="px-4 py-3">13:00</td>
+                <td class="px-4 py-3">Citra Dewi</td>
+                <td class="px-4 py-3">SIKAWAN</td>
+                <td class="px-4 py-3">09/10/2025</td>
+                <td class="px-4 py-3">15:40</td>
+                <td class="px-4 py-3">2 Jam 40 Menit</td>
+                <td class="px-4 py-3 text-green-700 font-semibold">Selesai</td>
+                <td class="px-4 py-3 text-center">
+                  <div class="flex justify-center gap-2">
+                    <button
+                      class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-list-ul"></i>
+                    </button>
+                    <button
+                      class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-lock"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+
+              <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
+                <td class="px-4 py-3">7</td>
+                <td class="px-4 py-3 font-mono text-blue-600">77X-TFL-3JK2</td>
+                <td class="px-4 py-3">03/10/2025</td>
+                <td class="px-4 py-3">08:00</td>
+                <td class="px-4 py-3">Dwi Arifin</td>
+                <td class="px-4 py-3">TOEFL/TOAFL</td>
+                <td class="px-4 py-3">05/10/2025</td>
+                <td class="px-4 py-3">09:45</td>
+                <td class="px-4 py-3">2 Hari</td>
+                <td class="px-4 py-3 text-green-700 font-semibold">Selesai</td>
+                <td class="px-4 py-3 text-center">
+                  <div class="flex justify-center gap-2">
+                    <button
+                      class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-list-ul"></i>
+                    </button>
+                    <button
+                      class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-lock"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+
+              <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
+                <td class="px-4 py-3">8</td>
+                <td class="px-4 py-3 font-mono text-blue-600">91B-ISN-9QP8</td>
+                <td class="px-4 py-3">07/10/2025</td>
+                <td class="px-4 py-3">10:20</td>
+                <td class="px-4 py-3">Siti Fadilah</td>
+                <td class="px-4 py-3">Sistem Informasi</td>
+                <td class="px-4 py-3">-</td>
+                <td class="px-4 py-3">-</td>
+                <td class="px-4 py-3">-</td>
+                <td class="px-4 py-3 text-yellow-600 font-semibold">
+                  Dalam Proses
+                </td>
+                <td class="px-4 py-3 text-center">
+                  <div class="flex justify-center gap-2">
+                    <button
+                      class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-list-ul"></i>
+                    </button>
+                    <button
+                      class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-lock"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+
+              <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
+                <td class="px-4 py-3">9</td>
+                <td class="px-4 py-3 font-mono text-blue-600">84W-LIB-6CD9</td>
+                <td class="px-4 py-3">06/10/2025</td>
+                <td class="px-4 py-3">11:10</td>
+                <td class="px-4 py-3">Agnes Lestari</td>
+                <td class="px-4 py-3">Perpustakaan</td>
+                <td class="px-4 py-3">07/10/2025</td>
+                <td class="px-4 py-3">13:30</td>
+                <td class="px-4 py-3">1 Hari 2 Jam</td>
+                <td class="px-4 py-3 text-green-700 font-semibold">Selesai</td>
+                <td class="px-4 py-3 text-center">
+                  <div class="flex justify-center gap-2">
+                    <button
+                      class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-list-ul"></i>
+                    </button>
+                    <button
+                      class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-lock"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+
+              <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
+                <td class="px-4 py-3">10</td>
+                <td class="px-4 py-3 font-mono text-blue-600">63H-CRR-4XZ1</td>
+                <td class="px-4 py-3">01/10/2025</td>
+                <td class="px-4 py-3">09:30</td>
+                <td class="px-4 py-3">Indra Saputra</td>
+                <td class="px-4 py-3">Pusat Karir</td>
+                <td class="px-4 py-3">03/10/2025</td>
+                <td class="px-4 py-3">14:00</td>
+                <td class="px-4 py-3">2 Hari 5 Jam</td>
+                <td class="px-4 py-3 text-green-700 font-semibold">Selesai</td>
+                <td class="px-4 py-3 text-center">
+                  <div class="flex justify-center gap-2">
+                    <button
+                      class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-list-ul"></i>
+                    </button>
+                    <button
+                      class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-lock"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+
+              <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
+                <td class="px-4 py-3">11</td>
+                <td class="px-4 py-3 font-mono text-blue-600">12P-NET-5AA4</td>
+                <td class="px-4 py-3">07/10/2025</td>
+                <td class="px-4 py-3">08:40</td>
+                <td class="px-4 py-3">Yoga Prasetyo</td>
+                <td class="px-4 py-3">Jaringan/WiFi</td>
+                <td class="px-4 py-3">-</td>
+                <td class="px-4 py-3">-</td>
+                <td class="px-4 py-3">-</td>
+                <td class="px-4 py-3 text-red-600 font-semibold">Baru</td>
+                <td class="px-4 py-3 text-center">
+                  <div class="flex justify-center gap-2">
+                    <button
+                      class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-list-ul"></i>
+                    </button>
+                    <button
+                      class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-lock"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+
+              <tr class="hover:bg-gray-50 transition duration-150 ease-in-out">
+                <td class="px-4 py-3">12</td>
+                <td class="px-4 py-3 font-mono text-blue-600">45K-WSD-7TT3</td>
+                <td class="px-4 py-3">02/10/2025</td>
+                <td class="px-4 py-3">13:15</td>
+                <td class="px-4 py-3">Nadia Kusuma</td>
+                <td class="px-4 py-3">Pelayanan Wisuda</td>
+                <td class="px-4 py-3">03/10/2025</td>
+                <td class="px-4 py-3">15:45</td>
+                <td class="px-4 py-3">1 Hari 2 Jam</td>
+                <td class="px-4 py-3 text-green-700 font-semibold">Selesai</td>
+                <td class="px-4 py-3 text-center">
+                  <div class="flex justify-center gap-2">
+                    <button
+                      class="bg-blue-400 hover:bg-blue-500 text-white px-[8px] py-[7px] rounded transition"
+                    >
+                      <i class="fa-solid fa-list-ul"></i>
+                    </button>
+                    <button
+                      class="bg-yellow-500 hover:bg-yellow-600 text-white px-[8px] py-[7px] rounded transition"
                     >
                       <i class="fa-solid fa-lock"></i>
                     </button>
