--- a/ticket/index.html
+++ b/ticket/index.html
@@ -77,7 +77,7 @@
         <!-- Box -->
         <div class="flex justify-between flex-wrap">
           <a
-            href="check-ticket"
+            href="/ticket/check-ticket/"
             class="relative group border border-green-300 border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-full text-center mb-4 transition-all duration-300 ease-in-out"
           >
             <span class="relative z-10 group-hover:text-gray-700">
@@ -89,60 +89,60 @@
             ></span>
           </a>
           <a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >Pelayanan Akademik <i class="fa-solid fa-arrow-right"></i>
           </a>
           <a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >Pelayanan Keuangan
             <i class="fa-solid fa-arrow-right"></i>
           </a>
           <a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >Kemahasiswaan
             <i class="fa-solid fa-arrow-right"></i>
           </a>
           <a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >Sarana & Prasarana <i class="fa-solid fa-arrow-right"></i> </a
           ><a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >SIKADU <i class="fa-solid fa-arrow-right"></i> </a
           ><a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >SIKAWAN
             <i class="fa-solid fa-arrow-right"></i>
           </a>
           <a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >Pelayanan Wisuda <i class="fa-solid fa-arrow-right"></i> </a
           ><a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >TOEFL/TOAFL <i class="fa-solid fa-arrow-right"></i> </a
           ><a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >Sistem Informasi
             <i class="fa-solid fa-arrow-right"></i>
           </a>
           <a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >Perpustakaan <i class="fa-solid fa-arrow-right"></i> </a
           ><a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >Pusat Karir <i class="fa-solid fa-arrow-right"></i> </a
           ><a
-            href="send-ticket"
+            href="/ticket/send-ticket"
             class="border border-l-4 border-l-green-300 text-gray-600 font-semibold px-3 py-4 rounded-lg w-[32%] mb-4 flex items-center gap-1 hover:gap-3 hover:bg-green-300 transition-all duration-300 ease-in-out"
             >Jaringan/WiFi
             <i class="fa-solid fa-arrow-right"></i>
