--- a/login/index.html
+++ b/login/index.html
@@ -28,7 +28,7 @@
       <!-- Kanan -->
       <div class="w-[40%]">
         <div class="w-[80%] mx-auto mt-20">
-          <form class="rounded-2xl p-8 w-full space-y-6" action="/superadmin">
+          <form class="rounded-2xl p-8 w-full space-y-6" action="/aktor">
             <h1 class="text-2xl font-semibold text-gray-800 text-center">
               Selamat Datang
             </h1>
