--- a/superadmin/tiket/detail/index.html
+++ b/superadmin/tiket/detail/index.html
@@ -170,10 +170,16 @@
             class="bg-white w-full rounded absolute right-0 top-[38px] mt-2 hidden"
           >
             <a
+              href="/aktor"
+              class="p-2 block w-full border border-white hover:bg-gradient-to-r from-[#bff3c2] to-white"
+            >
+              Ganti Role
+            </a>
+            <a
               href="#"
               class="p-2 block w-full border border-white hover:bg-gradient-to-r from-[#bff3c2] to-white"
             >
-              Profile
+              Back to SSO
             </a>
             <a
               href="/"
