--- a/superadmin/tiket/index.html
+++ b/superadmin/tiket/index.html
@@ -183,7 +183,7 @@
       class="w-full flex-1 bg-[#F2F7FF] relative p-6 pt-[100px] text-gray-700 h-screen overflow-y-auto"
     >
       <header
-        class="border border-2 w-full bg-white flex justify-between items-center p-4 fixed top-0 right-0 z-40"
+        class="border border-2 w-full bg-white flex justify-between items-center p-4 fixed top-0 right-0 z-50"
       >
         <div class="w-[170px]">
           <img
@@ -221,10 +221,16 @@
             class="bg-white w-full rounded absolute right-0 top-[38px] mt-2 hidden"
           >
             <a
+              href="/aktor"
+              class="p-2 block w-full border border-white hover:bg-gradient-to-r from-[#bff3c2] to-white"
+            >
+              Ganti Role
+            </a>
+            <a
               href="#"
               class="p-2 block w-full border border-white hover:bg-gradient-to-r from-[#bff3c2] to-white"
             >
-              Profile
+              Back to SSO
             </a>
             <a
               href="/"
