Update header unit

--- a/unit/index.html
+++ b/unit/index.html
@@ -125,7 +125,7 @@
               href="#"
               class="p-2 block w-full border border-white hover:bg-gradient-to-r from-[#bff3c2] to-white"
             >
-              Profile
+              Back to SSO
             </a>
             <a
               href="/"
