--- a/ticket/check-ticket/index.html
+++ b/ticket/check-ticket/index.html
@@ -107,12 +107,14 @@
           </div>
 
           <!-- Tombol -->
-          <button
-            type="submit"
-            class="w-full bg-green-600 hover:bg-green-700 text-white font-medium py-2.5 rounded-md transition-colors duration-200"
-          >
-            Kirim
-          </button>
+          <a href="/ticket/check-ticket/detail">
+            <button
+              type="button"
+              class="w-full mt-6 bg-green-600 hover:bg-green-700 text-white font-medium py-2.5 rounded-md transition-colors duration-200"
+            >
+              Kirim
+            </button>
+          </a>
         </form>
       </div>
     </section>
