--- a/faq/index.html
+++ b/faq/index.html
@@ -41,7 +41,7 @@
             ></span>
           </a>
 
-          <a href="#faq" class="relative group pb-1">
+          <a href="/#faq" class="relative group pb-1">
             FAQ
             <span
               class="absolute left-0 bottom-0 w-0 h-[2px] bg-green-400 transition-all duration-300 group-hover:w-full"
@@ -95,7 +95,7 @@
             <!-- Isi pertanyaan -->
             <div class="divide-y divide-gray-200">
               <a
-                href="#"
+                href="/faq/detail"
                 class="flex items-start gap-3 px-6 py-4 hover:bg-gray-50 transition"
               >
                 <i class="fa-regular fa-file-lines text-green-600 mt-1"></i>
@@ -106,7 +106,7 @@
               </a>
 
               <a
-                href="#"
+                href="/faq/detail"
                 class="flex items-start gap-3 px-6 py-4 hover:bg-gray-50 transition"
               >
                 <i class="fa-regular fa-file-lines text-green-600 mt-1"></i>
@@ -114,7 +114,7 @@
               </a>
 
               <a
-                href="#"
+                href="/faq/detail"
                 class="flex items-start gap-3 px-6 py-4 hover:bg-gray-50 transition"
               >
                 <i class="fa-regular fa-file-lines text-green-600 mt-1"></i>
@@ -125,7 +125,7 @@
               </a>
 
               <a
-                href="#"
+                href="/faq/detail"
                 class="flex items-start gap-3 px-6 py-4 hover:bg-gray-50 transition"
               >
                 <i class="fa-regular fa-file-lines text-green-600 mt-1"></i>
@@ -143,35 +143,35 @@
           <h3 class="text-xl font-bold text-gray-800 mb-4">FAQ Terbaru</h3>
           <div class="bg-white rounded-xl shadow-sm divide-y divide-gray-200">
             <a
-              href="#"
+              href="/faq/detail"
               class="flex items-start gap-3 px-5 py-3 hover:bg-gray-50 transition"
             >
               <i class="fa-regular fa-file-lines text-green-600 mt-1"></i>
               <span>Bagaimana mahasiswa mengumpulkan tugas?</span>
             </a>
             <a
-              href="#"
+              href="/faq/detail"
               class="flex items-start gap-3 px-5 py-3 hover:bg-gray-50 transition"
             >
               <i class="fa-regular fa-file-lines text-green-600 mt-1"></i>
               <span>Bagaimana cara dosen melakukan presensi online?</span>
             </a>
             <a
-              href="#"
+              href="/faq/detail"
               class="flex items-start gap-3 px-5 py-3 hover:bg-gray-50 transition"
             >
               <i class="fa-regular fa-file-lines text-green-600 mt-1"></i>
               <span>Apa saja menu utama dalam platform e-learning ini?</span>
             </a>
             <a
-              href="#"
+              href="/faq/detail"
               class="flex items-start gap-3 px-5 py-3 hover:bg-gray-50 transition"
             >
               <i class="fa-regular fa-file-lines text-green-600 mt-1"></i>
               <span>Bagaimana apabila saya lupa password?</span>
             </a>
             <a
-              href="#"
+              href="/faq/detail"
               class="flex items-start gap-3 px-5 py-3 hover:bg-gray-50 transition"
             >
               <i class="fa-regular fa-file-lines text-green-600 mt-1"></i>
