--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             Kenapa pada saat KRS mata kuliah ada yang tidak muncul sebagian?
           </p>
           <a
-            href="/faq-detail"
+            href="/faq"
             class="text-green-700 font-medium flex items-center gap-1 hover:gap-3 transition-all duration-300 ease-in-out"
           >
             Lihat Semua
@@ -144,7 +144,7 @@
             Kartu akses belum dapat sama sekali?
           </p>
           <a
-            href="/faq-detail"
+            href="/faq"
             class="text-green-700 font-medium flex items-center gap-1 hover:gap-3 transition-all duration-300 ease-in-out"
           >
             Lihat Semua
@@ -165,7 +165,7 @@
             Bagaimana cara mengakses aplikasi untuk mahasiswa?
           </p>
           <a
-            href="/faq-detail"
+            href="/faq"
             class="text-green-700 font-medium flex items-center gap-1 hover:gap-3 transition-all duration-300 ease-in-out"
           >
             Lihat Semua
@@ -186,7 +186,7 @@
             Kenapa pada saat KRS mata kuliah ada yang tidak muncul sebagian?
           </p>
           <a
-            href="/faq-detail"
+            href="/faq"
             class="text-green-700 font-medium flex items-center gap-1 hover:gap-3 transition-all duration-300 ease-in-out"
           >
             Lihat Semua
@@ -207,7 +207,7 @@
             Kartu akses belum dapat sama sekali?
           </p>
           <a
-            href="/faq-detail"
+            href="/faq"
             class="text-green-700 font-medium flex items-center gap-1 hover:gap-3 transition-all duration-300 ease-in-out"
           >
             Lihat Semua
@@ -228,7 +228,7 @@
             Bagaimana cara mengakses aplikasi untuk mahasiswa?
           </p>
           <a
-            href="/faq-detail"
+            href="/faq"
             class="text-green-700 font-medium flex items-center gap-1 hover:gap-3 transition-all duration-300 ease-in-out"
           >
             Lihat Semua
